<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".Login_SignUp_ForgetPassword_Portal.SignUp">
    <TextView
        android:id="@+id/signUpTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="48dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:fontFamily="@font/font1"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneContainer"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="120dp"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/Lightblue"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:endIconMode="clear_text"
        app:endIconTint="#2196F3"
        app:helperText="@string/required"
        app:counterEnabled="true"

        app:helperTextTextColor="@color/red"
        app:startIconDrawable="@drawable/baseline_phone_24"
        app:startIconTint="#2196F3"
        app:prefixText="+977"
        app:counterMaxLength="10"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:lines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordContainer"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="30dp"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/Lightblue"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="12dp"

        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"


        app:endIconMode="password_toggle"
        app:endIconTint="#2196F3"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/red"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:startIconTint="#2196F3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:lines="1"
            android:text="Tero@123" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/conformPasswordContainer"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="30dp"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="#2196F3"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="12dp"

        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"


        app:endIconMode="password_toggle"
        app:endIconTint="#2196F3"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/red"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:startIconTint="#2196F3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/conformPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:lines="1"
            android:text="Tero@123" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="#ffff"
        android:textSize="18dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:background="@drawable/edit_round"
        />
</LinearLayout>