<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".myprofile.myprofile">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/my_profile"
        android:textSize="45dp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        tools:layout_editor_absoluteX="-35dp"
        tools:layout_editor_absoluteY="133dp"
        android:fontFamily="@font/font1"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="11dp"
        app:cardElevation="16dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/Row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp">

            <ImageView
                android:id="@+id/imageContact"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:layout_marginTop="5dp"

                app:srcCompat="@drawable/baseline_person_24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginLeft="11dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text1"
                        android:layout_width="59dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:text="@string/name"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="22sp"
                        android:textStyle="bold" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/age"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtAgeprofile"
                        android:layout_width="39dp"
                        android:layout_height="wrap_content"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/text4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bloodgroup"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/txtBloodGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="16sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/location"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="39dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last_donated_date"
                        android:textSize="16dp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="="
                        android:textAlignment="center" />
                    <TextView
                        android:id="@+id/lastDonatedDate"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="235dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/blood1_donation" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/becomedonorbutton"
        android:layout_width="300dp"
        android:layout_marginLeft="25dp"
        android:layout_height="50dp"
        android:orientation="horizontal">
    </LinearLayout>


</LinearLayout>